Added main files

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <title>LCSS</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LCSS Website</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="https://central.tvdsb.ca/en/images/structure/logo.jpg">
+
 </head>
-<body>
-.
+<body class="">
+    <div class="w-screen h-screen grid grid-rows-2 grid-cols-2 bg-slate-800">
+        <!--Left side image-->
+        <div class="row-span-2 col-span-1">
+            <img class = "w-full h-full object-cover" src = "https://smartcdn.gprod.postmedia.digital/v1/dynamic_resize/sws_path/suns-prod-images/1297689996832_ORIGINAL.jpg"> 
+        </div>
+        <!--Right side Title-->
+        <div class="font-mono text-2xl row-span-1 col-span-1 flex justify-center items-center bg-amber-300">
+            <h1>London Central Secondary School</h1>
+        </div>
+        <!--Right side Description-->
+        <div class="text-xl row-span-1 col-span-1 flex justify-center items-center bg-violet-500">
+            <h3>A random high school in London Ontario. Pretty academic.</h3>
+            <p class="font-serif text-lg text-right align-text-bottom">Made by Programming Club</p> 
+        </div>
+    </div>
 </body>
 </html>
