Added main Files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--Right side Description-->
         <div class="text-xl row-span-1 col-span-1 flex justify-center items-center bg-violet-500">
             <h3>A random high school in London Ontario. Pretty academic.</h3>
-            <p class="font-serif text-lg text-right align-text-bottom">Made by Programming Club</p> 
+            <p class="font-serif text-lg text-right align-text-bottom">Made by Programming Club.</p> 
         </div>
     </div>
 </body>
